# japanese-law-search

./: .gitignore  Makefile  README.md  pyproject.toml
elasticsearch/: .env  Dockerfile  Makefile  docker-compose.yml  index.jsonc
japanese_law_search/: __main__.py  app.py  client.py  index.py  model.py  search.py  sentents_bert_vectorizer.py
